# langchain-code-generator

./: README.md  main.py  pyproject.toml
.streamlit/: config.toml
backend/: core.py  vector_ingestor.py
chroma_db/: chroma.sqlite3
documents/: jira-ticket-acceptance-criteria-guide.md  jira-ticket-generator-overview.md  jira-ticket-input-output-schema.md  jira-ticket-suggested-changes-guide.md  jira-ticket-time-estimation-guide.md
documents/examples/: example-01-login-page.md
